--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Сложно сосредоточиться</title>
+    <meta name="color-scheme" content="dark light">
+    <title>Сложно сосредоточиться</title> 
+    
+    <link rel="stylesheet" href="/bundle.css" />  
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" /> 
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="header__decorated-element" aria-hidden="true">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +47,242 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title title-text-shadow">
+        no focus
+      </h1>
+      <p class="header__title-text title-text__background__text__bold">
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+    <main>
+
+      <!-- Секция "Почему..." -->
+      <section class="section-one">
+        <h2 class="section-one__title h2-title">
+          Почему сосредоточиться так сложно
+        </h2>
+        <ul class="section-one__list">
+          <li class="section-one__list-item">
+            <h3 class="section-one__list-title title-text__background__text__bold">
+              Многозадачность
+            </h3>
+            <p class="section-one__list-text content-text">
+              Особенно сложно сосредоточиться, когда задач много и все они — важные. 
+              Где же легендарная многозадачность, когда она так нужна вам 
+              (и всем нанимающим менеджерам этого мира)? 
+              А дело в том, что её просто не существует. 
+              Исследователи
+              <a 
+                class="section-one__link"
+                href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
+                target="_blank">
+                выяснили
+              </a>
+              , что мозгу тяжело концентрироваться даже на двух делах одновременно. 
+              А когда в поле внимания попадает несколько важных задач, организм паникует 
+              и выделяет кортизол и адреналин — «гормоны стресса». 
+              Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            </p>
+          </li>
+          <li class="section-one__list-item">
+            <h3 class="section-one__list-title title-text__background__text__bold">
+              Дофамин
+            </h3>
+            <p class="section-one__list-text content-text">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. 
+              В нашей невозможности сосредоточиться замешана и 
+              полная противоположность стрессу — дофамин. 
+              Это вещество участвует в системе вознаграждения мозга. 
+              Причём тут он? Мы часто отвлекаемся от важной задачи 
+              на что-то более «приятное» для мозгов. 
+              Например, смотрим лайки в соцсетях. 
+              В это время и выделяется дофамин — и мы чувствуем удовольствие. 
+              Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Секция "Что..." -->
+      <section class="section-two">
+        <h2 class="section-two__title h2-title">
+          Что снижает концентрацию внимания?
+        </h2>
+        <ul class="section-two__list">
+          <li class="section-two__list-item">
+            <h3 class="section-two__list-title title-text__background__text__bold">
+              Многозадачность
+            </h3>
+            <p class="section-two__list-text content-text">
+              Как концентрация может снижаться из-за… концентрации? 
+              Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет 
+              наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
+              Например, читать новости вместо работы. Но быть собранными всё время — невозможно. 
+              Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </li>
+          <li class="section-two__list-item">
+            <h3 class="section-two__list-title title-text__background__text__bold">
+              Еда
+            </h3>
+            <p class="section-two__list-text content-text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг 
+              энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и 
+              приходит. А мы в результате попадаем на «углеводные качели»: как только действие 
+              «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. 
+              И хотим ещё больше быстрых углеводов.
+            </p>
+          </li>
+          <li class="section-two__list-item">
+            <h3 class="section-two__list-title title-text__background__text__bold">
+            Гаджеты
+            </h3>
+          
+          <p class="section-two__list-text content-text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, 
+            а на компьютере фоном — ещё и видео с забавными утятами. 
+            В результате мозг пытается переключиться с одной задачи на другую — и просто не может. 
+            А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. 
+            Вот и получается, что чем больше времени мы проводим в гаджетах, 
+            тем больше времени затем нужно, чтобы вернуться к работе.
+          </p>
+        </li>
+        </ul>
+      </section>
+
+      <!-- Секция "Как..." -->
+      <section class="section-three">
+        <h2 class="section-three__title h2-title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+        </h2>
+        <div class="section-three__list-container">
+          <h3 class="section-three__list-container-title title-text__background__text__bold">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="section-three__list">
+            <li class="section-three__list-item">
+              <h4 class="section-three__list-title title-text__background__text">
+                Представьте небо и облака
+              </h4>
+              <p class="section-three__list-text content-text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
+                Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные 
+                задачи делать. В такие моменты можно закрыть глаза и представить, 
+                что чистое небо — это вы, а облака — тревожные мысли. 
+                И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, 
+                и никуда не денется. Это упражнение поможет вернуться в настоящий момент, 
+                а не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+              <li class="section-three__list-item">
+                <h4 class="section-three__list-title title-text__background__text">
+                  Включите музыку
+                </h4>
+                <p class="section-three__list-text content-text">
+                  Но не любую, и не любимую. Любимая может быть связана с сильными положительными 
+                  эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, 
+                  умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» 
+                  или нейромузыкой.
+              </p>
+            </li>
+            <li class="section-three__list-item">
+              <h4 class="section-three__list-title title-text__background__text">
+                Прогуляйтесь
+              </h4>
+              <p class="section-three__list-text content-text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a 
+                  class="section-three__link"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank">
+                  показал
+                </a>
+                , что созерцание природы повышает концентрацию, 
+                в то время как после просмотра городских пейзажей она наоборот понижается. 
+                Можно совместить прогулку с физическими упражнениями или бегом — 
+                так в мозг поступит ещё больше кислорода и он будет лучше работать. 
+                Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </li>
+            <li class="section-three__list-item">
+              <h4 class="section-three__list-title title-text__background__text">
+                Хорошо ешьте
+              </h4>
+              <p class="section-two__list-text content-text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, 
+                которые препятствуют резким скачкам сахара в крови. 
+                Например, с высоким содержанием клетчатки: овощи, ягоды, 
+                бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              </p>
+            </li>
+            <li class="section-three__list-item">
+              <h4 class="section-three__list-title title-text__background__text">
+                Читайте
+              </h4>
+              <p class="section-three__list-text content-text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией: 
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
+                А вот интересная книга способна затянуть и на несколько часов и круто тренирует 
+                направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="gallery">
+        <h2 class="gallery__title title-text__background__text__bold">
+          А можно в картинках?
+        </h2>
+        <ul class="gallery__list">
+          <li class="gallery__list-item">
+            <img
+              class="gallery__img"
+              src="images/sunset.png"
+              alt="Картинка изображающая закат на фоне гор в фиолетово-персиковом стиле"
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery__list-item">
+            <img
+              class="gallery__img"
+              src="images/ice-cream.png"
+              alt="Картинка изображающая большую желтую тарелку в которой находятся четыре шарика мороженного в сливках, с милыми мордашками на фиолетовом фоне"
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery__list-item">
+            <img
+              class="gallery__img"
+              src="images/tape.png"
+              alt="Картинка изображающая аудио-кассету вокруг которой изображены компьютерныее ярлыки на фиолетовом фоне"
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery__list-item">
+            <img
+              class="gallery__img"
+              src="images/books.png"
+              alt="Картинка изображающая стопку книг сверху которой находится чашка на фиолетовом фоне"
+              loading="lazy"
+            />
+          </li>
+          <li class="gallery__list-item">
+            <img
+              class="gallery__img"
+              src="images/street.png"
+              alt="Картинка изображающая улицу в фиолетовом стиле"
+              loading="lazy"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer decorated-zone">
+      <p class="footer__text footer__text-shadow">
+        focus
+      </p>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
