--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title title-text-shadow">
-        no focus
-      </h1>
-      <p class="header__title-text title-decor">
-        Что делать, когда не можешь делать ничего
-        <br />
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </p>
+      <div class="title-container">
+        <h1 class="header__title title-text-shadow">
+          no focus
+        </h1>
+        <p class="header__title-text title-decor">
+          Что делать, когда не можешь делать ничего
+          <br />
+          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        </p>
+      </div>
     </header>
     <main class="main">
 
@@ -76,9 +78,9 @@
                 class="section-why__link"
                 href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
                 target="_blank">
-                выяснили
+                выяснили,
               </a>
-              , что мозгу тяжело концентрироваться даже на двух делах одновременно. 
+              что мозгу тяжело концентрироваться даже на двух делах одновременно. 
               А когда в поле внимания попадает несколько важных задач, организм паникует 
               и выделяет кортизол и адреналин — «гормоны стресса». 
               Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
@@ -195,9 +197,9 @@
                   class="section-how__link"
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   target="_blank">
-                  показал
+                  показал,
                 </a>
-                , что созерцание природы повышает концентрацию, 
+                что созерцание природы повышает концентрацию, 
                 в то время как после просмотра городских пейзажей она наоборот понижается. 
                 Можно совместить прогулку с физическими упражнениями или бегом — 
                 так в мозг поступит ещё больше кислорода и он будет лучше работать. 
@@ -235,48 +237,36 @@
         <h2 class="gallery__title title-decor">
           А можно в картинках?
         </h2>
-        <ul class="gallery__list">
-          <li class="gallery__list-item">
-            <img
-              class="gallery__img"
-              src="./images/sunset.png"
-              alt="Картинка изображающая закат на фоне гор в фиолетово-персиковом стиле"
-              loading="lazy"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              class="gallery__img"
-              src="./images/ice-cream.png"
-              alt="Картинка изображающая большую желтую тарелку в которой находятся четыре шарика мороженного в сливках, с милыми мордашками на фиолетовом фоне"
-              loading="lazy"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              class="gallery__img"
-              src="./images/tape.png"
-              alt="Картинка изображающая аудио-кассету вокруг которой изображены компьютерныее ярлыки на фиолетовом фоне"
-              loading="lazy"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              class="gallery__img"
-              src="./images/books.png"
-              alt="Картинка изображающая стопку книг сверху которой находится чашка на фиолетовом фоне"
-              loading="lazy"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              class="gallery__img"
-              src="./images/street.png"
-              alt="Картинка изображающая улицу в фиолетовом стиле"
-              loading="lazy"
-            />
-          </li>
-        </ul>
+          <img
+            class="gallery__img"
+            src="./images/sunset.png"
+            alt="Картинка изображающая закат на фоне гор в фиолетово-персиковом стиле"
+            loading="lazy"
+          />
+          <img
+            class="gallery__img"
+            src="./images/ice-cream.png"
+            alt="Картинка изображающая большую желтую тарелку в которой находятся четыре шарика мороженного в сливках, с милыми мордашками на фиолетовом фоне"
+            loading="lazy"
+          />
+          <img
+            class="gallery__img"
+            src="./images/tape.png"
+            alt="Картинка изображающая аудио-кассету вокруг которой изображены компьютерныее ярлыки на фиолетовом фоне"
+            loading="lazy"
+          />
+          <img
+            class="gallery__img"
+            src="./images/books.png"
+            alt="Картинка изображающая стопку книг сверху которой находится чашка на фиолетовом фоне"
+            loading="lazy"
+          />
+          <img
+            class="gallery__img"
+            src="./images/street.png"
+            alt="Картинка изображающая улицу в фиолетовом стиле"
+            loading="lazy"
+          />
       </section>
     </main>
     <footer class="footer decorated-zone__footer">
