Выполнена корректировка проекта с учетом замечаний ревьюера_3_финальная

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="header__title title-text-shadow">
           no focus
         </h1>
-        <p class="header__title-text title-decor">
+        <p class="header__title-text section__title">
           Что делать, когда не можешь делать ничего
           <br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень надо
@@ -60,22 +60,22 @@
 
       <!-- Секция "Почему..." -->
       <section class="section-why">
-        <h2 class="section-why__title header-decor">
+        <h2 class="section__header">
           Почему сосредоточиться так сложно
         </h2>
         <ul class="section-why__list">
           <li class="section-why__list-item">
-            <h3 class="section-why__list-title title-decor">
+            <h3 class="section__title">
               Многозадачность
             </h3>
-            <p class="section-why__list-text content-text">
+            <p class="section__text">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. 
               Где же легендарная многозадачность, когда она так нужна вам 
               (и всем нанимающим менеджерам этого мира)? 
               А дело в том, что её просто не существует. 
               Исследователи
               <a 
-                class="section-why__link"
+                class="section__link"
                 href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
                 target="_blank">
                 выяснили,
@@ -87,10 +87,10 @@
             </p>
           </li>
           <li class="section-why__list-item">
-            <h3 class="section-why__list-title title-decor">
+            <h3 class="section__title">
               Дофамин
             </h3>
-            <p class="section-why__list-text content-text">
+            <p class="section__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. 
               В нашей невозможности сосредоточиться замешана и 
               полная противоположность стрессу — дофамин. 
@@ -107,15 +107,15 @@
 
       <!-- Секция "Что..." -->
       <section class="section-what">
-        <h2 class="section-what__title header-decor">
+        <h2 class="section__header section__header-custom">
           Что снижает концентрацию внимания?
         </h2>
         <ul class="section-what__list">
           <li class="section-what__list-item">
-            <h3 class="section-what__list-title title-decor">
+            <h3 class="section__title">
               Многозадачность
             </h3>
-            <p class="section-what__list-text content-text">
+            <p class="section__text">
               Как концентрация может снижаться из-за… концентрации? 
               Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет 
               наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
@@ -124,10 +124,10 @@
             </p>
           </li>
           <li class="section-what__list-item">
-            <h3 class="section-what__list-title title-decor">
+            <h3 class="section__title">
               Еда
             </h3>
-            <p class="section-what__list-text content-text">
+            <p class="section__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг 
               энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и 
               приходит. А мы в результате попадаем на «углеводные качели»: как только действие 
@@ -136,11 +136,11 @@
             </p>
           </li>
           <li class="section-what__list-item">
-            <h3 class="section-what__list-title title-decor">
+            <h3 class="section__title">
             Гаджеты
             </h3>
           
-          <p class="section-what__list-text content-text">
+          <p class="section__text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, 
             а на компьютере фоном — ещё и видео с забавными утятами. 
             В результате мозг пытается переключиться с одной задачи на другую — и просто не может. 
@@ -154,19 +154,19 @@
 
       <!-- Секция "Как..." -->
       <section class="section-how">
-        <h2 class="section-how__title header-decor">
+        <h2 class="section__header">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
         <div class="section-how__list-container">
-          <h3 class="section-how__list-container-title title-decor">
+          <h3 class="section__title">
             5 простых (на самом деле не очень) советов
           </h3>
           <ul class="section-how__list">
             <li class="section-how__list-item">
-              <h4 class="section-how__list-title title-decor-short">
+              <h4 class="section-how__list-title-decor">
                 Представьте небо и облака
               </h4>
-              <p class="section-how__list-text content-text">
+              <p class="section__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
                 Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные 
                 задачи делать. В такие моменты можно закрыть глаза и представить, 
@@ -177,10 +177,10 @@
               </p>
             </li>
               <li class="section-how__list-item">
-                <h4 class="section-how__list-title title-decor-short">
+                <h4 class="section-how__list-title-decor">
                   Включите музыку
                 </h4>
-                <p class="section-how__list-text content-text">
+                <p class="section__text">
                   Но не любую, и не любимую. Любимая может быть связана с сильными положительными 
                   эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, 
                   умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» 
@@ -188,13 +188,13 @@
               </p>
             </li>
             <li class="section-how__list-item">
-              <h4 class="section-how__list-title title-decor-short">
+              <h4 class="section-how__list-title-decor">
                 Прогуляйтесь
               </h4>
-              <p class="section-how__list-text content-text">
+              <p class="section__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a 
-                  class="section-how__link"
+                  class="section__link"
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   target="_blank">
                   показал,
@@ -207,10 +207,10 @@
               </p>
             </li>
             <li class="section-how__list-item">
-              <h4 class="section-how__list-title title-decor-short">
+              <h4 class="section-how__list-title-decor">
                 Хорошо ешьте
               </h4>
-              <p class="section-how__list-text content-text">
+              <p class="section__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, 
                 которые препятствуют резким скачкам сахара в крови. 
                 Например, с высоким содержанием клетчатки: овощи, ягоды, 
@@ -218,10 +218,10 @@
               </p>
             </li>
             <li class="section-how__list-item">
-              <h4 class="section-how__list-title title-decor-short">
+              <h4 class="section-how__list-title-decor">
                 Читайте
               </h4>
-              <p class="section-how__list-text content-text">
+              <p class="section__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией: 
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
                 А вот интересная книга способна затянуть и на несколько часов и круто тренирует 
@@ -234,7 +234,7 @@
 
       <!--Секция "Галерея"-->
       <section class="gallery">
-        <h2 class="gallery__title title-decor">
+        <h2 class="section__title gallery__title ">
           А можно в картинках?
         </h2>
           <img
