--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 class="section__link"
                 href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
                 target="_blank">
-                выяснили,
+                выяснили
               </a>
-              что мозгу тяжело концентрироваться даже на двух делах одновременно. 
+              , что мозгу тяжело концентрироваться даже на двух делах одновременно. 
               А когда в поле внимания попадает несколько важных задач, организм паникует 
               и выделяет кортизол и адреналин — «гормоны стресса». 
               Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
@@ -197,9 +197,9 @@
                   class="section__link"
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                   target="_blank">
-                  показал,
+                  показал
                 </a>
-                что созерцание природы повышает концентрацию, 
+                , что созерцание природы повышает концентрацию, 
                 в то время как после просмотра городских пейзажей она наоборот понижается. 
                 Можно совместить прогулку с физическими упражнениями или бегом — 
                 так в мозг поступит ещё больше кислорода и он будет лучше работать. 
@@ -269,7 +269,7 @@
           />
       </section>
     </main>
-    <footer class="footer decorated-zone__footer">
+    <footer class="footer decorated-zone">
       <h2 class="footer__text">
         focus
       </h2>
